Cambio en h2 y centrado en styles

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body {
     background-color: gray;
 }
 
+h2 {
+    text-align: center;
+}
+
 .main {
     background-color: blue;
     min-height: 500px;
